crates/tui/tests/snapshots/snapshots__accounts_form_gmail_editing_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
expression: snapshot
---
"                                                              ┌ Account Mode ──────────────────────┐"
"                                                              │ Gmail │ IMAP + SMTP │ SMTP only │ O│"
"                                                              └────────────────────────────────────┘"
"                                                              ┌ Account Form ──────────────────────┐"
"                                                              │Mode              Gmail             │"
"                                                              │Account key       work|             │"
"                                                              │Display name      Work              │"
"                                                              │Email             me@example.com    │"
"                                                              │Credential source Bundled           │"
"                                                              │Token ref         mxr/work-gmail    │"
"                                                              │                                    │"
"                                                              │Auth state: not authorized          │"
"                                                              │                                    │"
"                                                              │Tip: type to edit. Enter or Esc     │"
"                                                              │finishes. Tab and Shift-Tab jump    │"
"                                                              │between fields.                     │"
"                                                              └────────────────────────────────────┘"
"                                                              ┌────────────────────────────────────┐"
"                                                              │Enter/Esc:finish  Left/Right:cursor │"
"                                                              └────────────────────────────────────┘"
