crates/tui/tests/snapshots/snapshots__accounts_form_gmail_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 301
expression: snapshot
---
"┌ Accounts ────────────────────────┐┌ Account Mode ────────────────────────────────────────────────┐"
"│                                  ││ Gmail │ IMAP + SMTP │ SMTP only                              │"
"│                                  │└──────────────────────────────────────────────────────────────┘"
"│                                  │┌ Account Form ────────────────────────────────────────────────┐"
"│                                  ││Mode              Gmail                                       │"
"│                                  ││Account key       work                                        │"
"│                                  ││Display name      Work                                        │"
"│                                  ││Email             me@example.com                              │"
"│                                  ││Credential source Bundled                                     │"
"│                                  ││Token ref         mxr/work-gmail                              │"
"│                                  ││                                                              │"
"│                                  ││Auth state: not verified                                      │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  │└──────────────────────────────────────────────────────────────┘"
"│                                  │┌──────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────┘└──────────────────────────────────────────────────────────────┘"
