crates/tui/tests/snapshots/snapshots__accounts_page_onboarding_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 368
expression: snapshot
---
"┌ Accounts ────────────────────────┐┌ Details ─────────────────────────────────────────────────────┐"
"│                                  ││No accounts configured                                        │"
"│                                  ││                                                              │"
"│                                  ││Press n to add a Gmail, IMAP/SMTP, or SMTP account            │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                      ┌ Welcome ───────────────────────────────────────────┐                      │"
"│                      │         You need to set up an account first        │                      │"
"│                      │               before you can use mxr.              │                      │"
"│                      │                                                    │                      │"
"│                      │    Press Enter to continue to the account form.    │                      │"
"│                      └────────────────────────────────────────────────────┘                      │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"│                                  ││                                                              │"
"└──────────────────────────────────┘└──────────────────────────────────────────────────────────────┘"
