crates/tui/tests/snapshots/snapshots__accounts_page_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 419
expression: snapshot
---
"┌ Account Details ───────────────────────────────────────────┐┌ Accounts / Browse ─────────────────┐"
"│Work  [default]                                             ││> Work  [default | imap | smtp | con│"
"│                                                            ││                                    │"
"│Summary: me@example.com via imap                            ││                                    │"
"│Key: work                                                   ││                                    │"
"│Auth: managed by saved config                               ││                                    │"
"│Sync: imap                                                  ││                                    │"
"│Send: smtp                                                  ││                                    │"
"│Default: yes                                                ││                                    │"
"│Source: config                                              ││                                    │"
"│Editable: full                                              ││                                    │"
"│                                                            ││                                    │"
"│Actions                                                     ││                                    │"
"│Enter edit selected account                                 ││                                    │"
"│t test account                                              ││                                    │"
"│d set default                                               ││                                    │"
"└────────────────────────────────────────────────────────────┘│                                    │"
"┌────────────────────────────────────────────────────────────┐│                                    │"
"│n:new  Enter:edit  t:test  d:set default                    ││                                    │"
"└────────────────────────────────────────────────────────────┘└────────────────────────────────────┘"
