crates/tui/tests/snapshots/snapshots__attachment_modal_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 497
expression: snapshot
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ╭ Attachments ─────────────────────────────────────────────╮                    "
"                    │ 1  report.pdf  application/pdf  (downloaded)             │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    │Enter/o open  d download  j/k move  Esc close             │                    "
"                    │                                                          │                    "
"                    ╰──────────────────────────────────────────────────────────╯                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
