crates/tui/tests/snapshots/snapshots__bars_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
expression: snapshot
---
"                                                                                "
"                ┌ Search [lexical] ────────────────────────────┐                "
"                │ > de                                         │                "
"                │ Enter submit  Tab mode  Esc cancel           │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"=INBOX [Msgs:6421 New:1833 Starred:96]= synced just now                         "
"                                                                                "
