crates/tui/tests/snapshots/snapshots__bulk_confirm_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 546
expression: snapshot
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ╭ Archive messages ────────────────────────────────────────╮                    "
"                    │Archive 3 selected messages?                              │                    "
"                    │                                                          │                    "
"                    ╰──────────────────────────────────────────────────────────╯                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
