crates/tui/tests/snapshots/snapshots__command_palette_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 144
expression: snapshot
---
"                                                                      "
"                                                                      "
"       ╭ Command Palette ─────────────────────────────────────╮       "
"       │╭ Query  9 matches  Mailbox / List ──────────────────╮│       "
"       ││> un                                                ││       "
"       │╰────────────────────────────────────────────────────╯│       "
"       │╭ Commands ──────────────────────────────────────────▲│       "
"       ││@    Mail  Unsubscribe                    D         █│       "
"       ││@    Mail  Star / Unstar                  s         █│       "
"       ││@    Mail  Mark Unread                    U         ║│       "
"       ││>    Navigation  Open Accounts Page       palette   ║│       "
"       │╰────────────────────────────────────────────────────▼│       "
"       │╭────────────────────────────────────────────────────╮│       "
"       ││enter run   ↑↓ move   esc close   selected Unsubscri││       "
"       │╰────────────────────────────────────────────────────╯│       "
"       ╰──────────────────────────────────────────────────────╯       "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
