crates/tui/tests/snapshots/snapshots__compose_picker_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 771
expression: snapshot
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ╭ Compose — To: (Tab to add, Enter to continue) ───────────╮                    "
"                    │                                                          │                    "
"                    │> a                                                       │                    "
"                    │Leave blank to add a recipient later.                     │                    "
"                    │  Alice Example <alice@example.com>                       │                    "
"                    │  Bob Example <bob@example.com>                           │                    "
"                    │                                                          │                    "
"                    │                                                          │                    "
"                    ╰──────────────────────────────────────────────────────────╯                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
