crates/tui/tests/snapshots/snapshots__diagnostics_page_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
expression: snapshot
---
"┌ Diagnostics ───────────┐┌ Summary / Status / Doctor ─────────────────────────────────────────────┐"
"│> Status / Doctor  [heal││daemon=unknown  pid=4242                                                │"
"│  Data / Storage  [42 ms││accounts=1  messages=42                                                 │"
"│  Sync Health  [1 accoun││health healthy ─────────────────────────────────────────────────────────│"
"│  Recent Events  [1 rece││index current ──────────────────────────────────────────────────────────│"
"│  Recent Logs  [2 lines]││                                                                        │"
"│  Activity Log  [0 rows]│└────────────────────────────────────────────────────────────────────────┘"
"│                        │┌ Status / Doctor ───────────────────────────────────────────────────────┐"
"│                        ││Health: healthy status=ok                                               │"
"│                        ││Lifecycle: restart=no repair=no                                         │"
"│                        ││Uptime: 3600s                                                           │"
"│                        ││Daemon: pid=4242 version=0.4.4 protocol=1                               │"
"│                        ││Messages: total=42 unread=7 starred=3                                   │"
"│                        ││Freshness: lex=current sync=03-20 10:59Z                                │"
"│                        ││Lexical rebuilt: 03-20 10:55Z                                           │"
"│                        ││Findings: none                                                          │"
"│                        ││Hints: Tab/Shift-Tab pane  Enter fullscreen  d details  L logs          │"
"│                        ││                                                                        │"
"│                        ││                                                                        │"
"│                        ││                                                                        │"
"│                        │└────────────────────────────────────────────────────────────────────────┘"
"│                        │┌────────────────────────────────────────────────────────────────────────┐"
"│                        ││j/k:section  Ctrl-d/u:scroll  Enter/o:full  /:search  r:refresh  c:confi│"
"└────────────────────────┘└────────────────────────────────────────────────────────────────────────┘"
