crates/tui/tests/snapshots/snapshots__help_modal_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
expression: snapshot
---
"                                                                                                    "
"                                                                                                    "
"      ╭ Help ────────────────────────────────────────────────────────────────────────────────╮      "
"      │Start Here                                                                           ▲│      "
"      │Ctrl-p              Open command palette                                             █│      "
"      │gc                  Edit config in $EDITOR                                           █│      "
"      │?                   Toggle Help                                                      ║│      "
"      │Esc                 Back / Close                                                     ║│      "
"      │q                   Quit                                                             ║│      "
"      │                                                                                     ║│      "
"      │How do I…                                                                            ║│      "
"      │Add an account      4 → n (or palette: New IMAP/SMTP Account)                        ║│      "
"      │Compose and send    c → write in $EDITOR → save → s to send                          ║│      "
"      │Search and save a search/ to query → palette: New Saved Search → n in sidebar to     ║│      "
"      │refine                                                                               ║│      "
"      │Manage rules        3 → n new / E edit / D dry-run / palette: Refresh Rules          ║│      "
"      │Reset local state   shell: mxr reset --hard (or mxr burn) — keeps config + creds     ║│      "
"      │Repair an unhealthy account4 → select account → r when [unhealthy] indicator shown   ║│      "
"      │Open analytics      palette: Analytics: Storage / Stale Threads / Contact Asymmetry /║│      "
"      │Response Time                                                                        ║│      "
"      │Undo a destructive actionu within 60s of archive/trash/spam/mark-read                ║│      "
"      │                                                                                     ║│      "
"      │Most Common Actions                                                                  ║│      "
"      │Context             Mailbox / List                                                   ║│      "
"      │/                   Search all indexed mail                                          ▼│      "
"      ╰──────────────────────────────────────────────────────────────────────────────────────╯      "
"                                                                                                    "
"                                                                                                    "
