crates/tui/tests/snapshots/snapshots__label_picker_snapshot.snap
---
source: crates/tui/tests/snapshots.rs
expression: snapshot
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                 ┌ Move to Label ──────────────────┐                  "
"                 │> p                              │                  "
"                 │  Projects                       │                  "
"                 │                                 │                  "
"                 │                                 │                  "
"                 └─────────────────────────────────┘                  "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
